--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,9 @@ on:
   release:
     types: [published]
 
+env:
+  DOCKER_HUB_REPOSITORY: usbkvm
+
 jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
@@ -42,7 +45,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: alexsrdev/usbkvm
+          images: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_HUB_REPOSITORY }}
           name: alexsrdev/usbkvm
 
       - name: Build and push Docker images
